<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_first_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wizard_password_description" />
    
    <TextView
        android:id="@+id/title_new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wizard_password" />

    <EditText
        android:id="@+id/edit_new_pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/title_new_pass_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wizard_password_again" />

    <EditText
        android:id="@+id/edit_new_pass_again"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:inputType="textPassword"/>

</LinearLayout>