<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center" >
    
    <Button
        android:id="@+id/stateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_state"
        android:onClick="onCommandSelected"
        android:text="@string/system_state"
        android:textColor="@android:color/white" />
    
    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_state"
        android:onClick="onCommandSelected"
        android:text="@string/system_reset"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/hardResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_state"
        android:onClick="onCommandSelected"
        android:text="@string/system_hard_reset"
        android:textColor="@android:color/white" />

</LinearLayout>