<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/title_time_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/setSpeed"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" 
        android:gravity="center_horizontal" >
    
     <com.provauto.bretto.wcontrol.numberpicker.NumberPicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/mins_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:layout_gravity="center_vertical" />
    
    <com.provauto.bretto.wcontrol.numberpicker.NumberPicker
            android:id="@+id/speed_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/kmh_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kmh"
        android:layout_gravity="center_vertical" />
    
    </LinearLayout>

</LinearLayout>